added: fase 5 finalizada - capa API

--- a/src/MovieManager.API/appsettings.json
+++ b/src/MovieManager.API/appsettings.json
@@ -1,20 +1,18 @@
 {
-  "ConnectionStrings": {
-    "MongoDb": "mongodb+srv://yulayracingteam_db_user:Vf57IqiCWklyScq5@cluster0.uuthaye.mongodb.net/MoviesDb?retryWrites=true&w=majority"
-  },
-  "MongoDbSettings": {
+  "MongoDb": {
+    "ConnectionString": "mongodb+srv://yulayracingteam_db_user:Vf57IqiCWklyScq5@cluster0.uuthaye.mongodb.net/MoviesDb?retryWrites=true&w=majority",
     "DatabaseName": "MoviesDb",
     "MoviesCollectionName": "Movies",
     "UsersCollectionName": "Users"
   },
-  "JwtSettings": {
+  "Jwt": {
     "SecretKey": "MovieManagerSecretKey2024SuperSecureKeyForJWTAuthentication!",
     "Issuer": "MovieManagerAPI",
     "Audience": "MovieManagerClients",
     "ExpirationMinutes": 60,
     "RefreshTokenExpirationDays": 7
   },
-  "OmdbSettings": {
+  "Omdb": {
     "BaseUrl": "http://www.omdbapi.com/",
     "ApiKey": "b279cce3"
   },
