--- a/src/MovieManager.API/MovieManager.API.csproj
+++ b/src/MovieManager.API/MovieManager.API.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>2d7f2310-227a-4c5e-b6d5-39013e0d73c3</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
