--- a/src/MovieManager.API/appsettings.Example.json
+++ b/src/MovieManager.API/appsettings.Example.json
@@ -1,12 +1,12 @@
 {
   "MongoDb": {
-    "ConnectionString": "",
+    "ConnectionString": "mongodb+srv://USERNAME:PASSWORD@cluster.mongodb.net/DATABASE?retryWrites=true&w=majority",
     "DatabaseName": "MoviesDb",
     "MoviesCollectionName": "Movies",
     "UsersCollectionName": "Users"
   },
   "Jwt": {
-    "SecretKey": "",
+    "SecretKey": "YOUR_SECRET_KEY_MIN_32_CHARACTERS_LONG_HERE!",
     "Issuer": "MovieManagerAPI",
     "Audience": "MovieManagerClients",
     "ExpirationMinutes": 60,
@@ -14,7 +14,7 @@
   },
   "Omdb": {
     "BaseUrl": "http://www.omdbapi.com/",
-    "ApiKey": ""
+    "ApiKey": "YOUR_OMDB_API_KEY"
   },
   "IpRateLimiting": {
     "EnableEndpointRateLimiting": true,
