--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+#IA Docs folder
+docs/
+
 # User-specific files
 *.rsuser
 *.suo
